# code-rustic

./: Cargo.toml  README.md
src/: main.rs  txtbuffer.rs
