[package]
name = "editor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.19.2", features = ["full"] }
crossterm = { version = "0.23", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = { version = "0.18", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"